kubernetes/apps/uptime-kuma/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: "app=uptime-kuma"
    gethomepage.dev/widget.type: "uptimekuma"
    gethomepage.dev/widget.url: "http://uptime-kuma.uptime-kuma.svc.cluster.local:3001"
    gethomepage.dev/widget.slug: "homelab"
    gethomepage.dev/name: Status Page
    gethomepage.dev/description: Uptime Monitoring (VPN-only via NetBird)
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: uptime-kuma.png
    # gethomepage.dev/widget.type: uptimekuma
    # gethomepage.dev/widget.url: http://uptime-kuma.uptime-kuma.svc:3001
    # gethomepage.dev/widget.slug: homelab
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - status.timourhomelab.org
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
